fixed few bugs in old notes

--- a/notes/2019-07-09-SPT_data_analysis_compendium.ipynb
+++ b/notes/2019-07-09-SPT_data_analysis_compendium.ipynb
@@ -105,6 +105,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(spt)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -118,6 +127,15 @@
    "outputs": [],
    "source": [
     "spt_by_track = spt.groupby('TRACK_ID')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spt_by_track.get_group(1)"
    ]
   },
   {
@@ -294,7 +312,7 @@
     "track_statistics = pd.read_csv('%s/Track statistics.csv'%(mydir))\n",
     "\n",
     "# let's have a look at what it looks like\n",
-    "track_statistics.head()"
+    "track_statistics[['Label','TRACK_ID','TRACK_MEAN_QUALITY']].head()"
    ]
   },
   {
@@ -375,6 +393,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "track_statistics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def load_spt(datadir, quality = None) :\n",
     "    # load the SPT data file\n",
     "    spt_fname = '%s/Spots in tracks statistics.txt'%(datadir)\n",
@@ -393,10 +420,11 @@
     "    \n",
     "    # extract trajectories\n",
     "    trajectories = []\n",
+    "    good_track_ids = []\n",
     "    for track_id, track in spt_by_track :\n",
-    "\n",
+    "        \n",
     "        # skip tracks that did not have sufficiently high average quality\n",
-    "        if track_id not in tracks_to_keep :\n",
+    "        if track_id in tracks_to_exclude.values :\n",
     "            continue\n",
     "\n",
     "        # extract x and y from the trajectory\n",
@@ -405,6 +433,7 @@
     "\n",
     "        # finally, append the current trajectory to the list of trajectories\n",
     "        trajectories.append(np.array([x, y]).T)\n",
+    "        good_track_ids.append(track_id)\n",
     "    \n",
     "    return trajectories"
    ]
